<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_text_up"
        android:orderInCategory="1"
        android:title="@string/action_text_up"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text_down"
        android:orderInCategory="2"
        android:title="@string/action_text_down"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back_change"
        android:orderInCategory="3"
        android:title="@string/action_back_change"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_introduction"
        android:orderInCategory="4"
        android:title="@string/action_introduction"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_all_clear"
        android:orderInCategory="5"
        android:title="@string/action_all_clear"
        app:showAsAction="never" />
</menu>
